# LinuxApplicationDevelopment2023

./: .gitignore
01_TerminalProject/: Makefile  Show.c  test.c
02_Multifile/: Makefile  const.c  fun.c  outlib.h  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb1  gdb2  range.c
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  protect.c
07_Environmental/: Makefile.am  configure.ac  do.sh  rhasher.c
08_I18n/: configure.ac  do.sh
08_I18n/po/: ru.po
08_I18n/src/: guessr.c
09_PatchDiff/: 0001-Ninth-task-part-1.patch  0002-Ninth-task-part-2.patch  0003-Ninth-task-part-3.patch  Makefile  gen_maze.c
10_Testing/: COPYING  configure.ac
10_Testing/src/: buf.c  buf.h
10_Testing/tests/: Makefile.am
11_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac  do.sh
11_Documenting/po/: ru.po
11_Documenting/src/: guessr.c
